<resources>
    <string name="app_name">GitHub</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Overview</string>
    <string name="title_dashboard">Repositories</string>
    <string name="title_followers">Followers</string>
    <string name="authentication">Authentication</string>
    <string name="user_avatar">user avatar</string>
    <string name="user_home_dialog_error_title">Error</string>
    <string name="user_home_dialog_error_message">Unable to load the page.</string>
    <string name="repositories">Repositories</string>
    <string name="loading_user_data">Loading user data</string>
    <string name="updating_user_data">Updating user data</string>
    <string name="repo_name">repo name</string>
    <string name="repo_description">repo description</string>
    <string name="repo_language">repo language</string>
    <string name="repo_license">repo license</string>
    <string name="repo_stars">repo stars</string>
    <string name="user_load_repos_error_title">Error</string>
    <string name="user_load_repos_error_message">Failed to load repositories</string>
    <string name="web_view_dialog_error_title">Error</string>
    <string name="web_view_dialog_error_message">Failed to authenticate</string>
    <string name="user_email">Public email</string>
    <string name="user_blog">Blog</string>
    <string name="user_location">Location</string>
    <string name="user_company">Company</string>
    <string name="user_bio">Bio</string>
    <string name="done_button">Done</string>
    <string name="cancel_button">Cancel</string>
    <string name="user_home_dialog_error_update_user_info_message">Some problems occurred while updating user info</string>
    <string name="user_bio_alert_dialog_title">Bio</string>
    <string name="user_name">Name</string>
    <string name="user_url">URL</string>
    <string name="public_profile">Public profile</string>
    <string name="user_bio_message">You can @mention other users and organizations to link to them.</string>
    <string name="user_company_message">You can @mention your company’s GitHub organization to link it.</string>
    <string name="edit_done">done</string>
    <string name="noti_channel_repos">Repositories</string>
    <string name="repo_was_updated_message">Was updated</string>
    <string name="user_login">login</string>
    <string name="user_image">user image</string>
</resources>
