<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/repo_name"
        style="@style/DarkTheme.TextView.RepoName"
        android:text="@string/repo_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repo_description"
        style="@style/DarkTheme.TextView"
        android:gravity="start"
        android:text="@string/repo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repo_name" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flex_box_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repo_description">

        <TextView
            android:id="@+id/repo_language"
            style="@style/DarkTheme.TextView"
            android:text="@string/repo_language" />

        <TextView
            android:id="@+id/repo_stars"
            style="@style/DarkTheme.TextView"
            android:drawableStart="@drawable/ic_repo_star_24dp"
            android:padding="0dp"
            android:text="@string/repo_stars" />

        <TextView
            android:id="@+id/repo_license"
            style="@style/DarkTheme.TextView"
            android:drawableStart="@drawable/ic_license_24dp"
            android:text="@string/repo_license" />
    </com.google.android.flexbox.FlexboxLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="?attr/startAppText"
        app:layout_constraintTop_toBottomOf="@id/flex_box_layout" />

</android.support.constraint.ConstraintLayout>