<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="@dimen/follower_image_width"
        android:layout_height="@dimen/follower_image_height"
        android:layout_margin="8dp"
        android:contentDescription="@string/user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/colorPrimary" />

    <TextView
        android:id="@+id/user_name"
        style="@style/DarkTheme.TextView.Home"
        android:text="@string/user_name"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/user_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_login"
        style="@style/DarkTheme.TextView.Followers"
        android:gravity="start"
        android:text="@string/user_login"
        app:layout_constraintBottom_toBottomOf="@+id/user_name"
        app:layout_constraintStart_toEndOf="@+id/user_name" />

    <TextView
        android:id="@+id/user_location"
        style="@style/DarkTheme.TextView.Followers"
        android:drawableStart="@drawable/ic_location_on_24dp"
        android:text="@string/user_location"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_login" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="?attr/startAppText"
        app:layout_constraintTop_toBottomOf="@id/user_location" />

</android.support.constraint.ConstraintLayout>