<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/DarkTheme.ToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/public_profile" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name"
                    style="@style/DarkTheme.TextView.Edit"
                    android:labelFor="@+id/user_name_edit_text"
                    android:text="@string/user_name" />

                <EditText
                    android:id="@+id/user_name_edit_text"
                    style="@style/DarkTheme.EditText.Edit" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_email"
                    style="@style/DarkTheme.TextView.Edit"
                    android:labelFor="@+id/user_email_edit_text"
                    android:text="@string/user_email" />

                <EditText
                    android:id="@+id/user_email_edit_text"
                    style="@style/DarkTheme.EditText.Edit"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_bio"
                    style="@style/DarkTheme.TextView.Edit"
                    android:labelFor="@+id/user_bio_edit_text"
                    android:text="@string/user_bio" />

                <EditText
                    android:id="@+id/user_bio_edit_text"
                    style="@style/DarkTheme.EditText.Edit" />

                <TextView
                    style="@style/DarkTheme.TextView"
                    android:layout_marginTop="0dp"
                    android:text="@string/user_bio_message" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_url"
                    style="@style/DarkTheme.TextView.Edit"
                    android:labelFor="@+id/user_url_edit_text"
                    android:text="@string/user_url" />

                <EditText
                    android:id="@+id/user_url_edit_text"
                    style="@style/DarkTheme.EditText.Edit"
                    android:inputType="textUri" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_company"
                    style="@style/DarkTheme.TextView.Edit"
                    android:labelFor="@+id/user_company_edit_text"
                    android:text="@string/user_company" />

                <EditText
                    android:id="@+id/user_company_edit_text"
                    style="@style/DarkTheme.EditText.Edit" />

                <TextView
                    style="@style/DarkTheme.TextView"
                    android:layout_marginTop="0dp"
                    android:text="@string/user_company_message" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_location"
                    style="@style/DarkTheme.TextView.Edit"
                    android:labelFor="@+id/user_location_edit_text"
                    android:text="@string/user_location" />

                <EditText
                    android:id="@+id/user_location_edit_text"
                    style="@style/DarkTheme.EditText.Edit" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
